--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,16 +33,16 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr  th:each="employee : ${listemployee}">
-                        <td th:text="${employee.id}">Employee ID</td>
-                        <td th:text="${employee.ename}">Employee Name</td>
-                        <td th:text="${employee.mobile}">Mobile</td>
-                        <td th:text="${employee.salary}">Salary</td>
+                    <tr  th:each="beans : ${listebeans}">
+                        <td th:text="${beans.beansid}">Employee ID</td>
+                        <td th:text="${beans.Nom}">Employee Name</td>
+                        <td th:text="${beans.Score}">Mobile</td>
+                        <td th:text="${beans.Torrefaction}">Salary</td>
                         <td>
-                            <a th:href="@{'/edit/' + ${employee.id}}">Edit</a>
+                            <a th:href="@{'/edit/' + ${beans.beansid}}">Edit</a>
                         </td>
                         <td>
-                            <a th:href="@{'/delete/' + ${employee.id}}">Delete</a>
+                            <a th:href="@{'/delete/' + ${beans.beansid}}">Delete</a>
                         </td>
                     </tr>
 
